--- a/index.css
+++ b/index.css
@@ -167,3 +167,19 @@ h2{
     padding-top:85px;
 
 }
+
+// Core styles
+
+a:link, a:visited {
+    background-color: #646466;
+    color: #B44E32;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+
+a:hover, a:active {
+    background-color: #7D1C68;
+}
