--- a/index.css
+++ b/index.css
@@ -3,9 +3,7 @@ body{
       margin-top: 50px;
       font-size: 100%;
       background-color: #C186FF;
-      position: relative;
-      width: 1500px;
-      position: relative;
+      width: 100%;    
 }
 h1{
       font-family: 'Pacifico', cursive;
